<resources>
    <string name="app_name">Tpms</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="carlunzi1">左前轮</string>
    <string name="carlunzi2">右前轮</string>
    <string name="carlunzi3">左后轮</string>
    <string name="carlunzi4">右后轮</string>
    <string name="carlunziid1">左前轮ID</string>
    <string name="carlunziid2">右前轮ID</string>
    <string name="carlunziid3">左后轮ID</string>
    <string name="carlunziid4">右后轮ID</string>
    <string name="carlunzihigh1">左前轮胎</string>
    <string name="carlunzihigh2">右前轮胎</string>
    <string name="carlunzihigh3">左后轮胎</string>
    <string name="carlunzihigh4">右后轮胎</string>
    <string name="menu1">胎压监测(未连接)</string>
    <string name="menu2">胎压监测</string>
    <string name="menu3">交换模式</string>
    <string name="menu4">ID设置</string>
    <string name="menu1en">Tire Pressure Monitor(Disconnect)</string>
    <string name="menu2en">Tire Pressure Monitor</string>
    <string name="menu1ch">胎壓監測(未連接)</string>
    <string name="menu2ch">胎壓監測</string>
    <string name="singlechoice1en">Please Select Operation Mode</string>
    <string name="singlechoice2en">ID Mode</string>
    <string name="singlechoice3en">Interactive Mode</string>
    <string name="singlechoice4en">Cancel</string>
    <string name="singlechoice1ch">請選擇操作模式</string>
    <string name="singlechoice2ch">ID模式</string>
    <string name="singlechoice3ch">交換模式</string>
    <string name="singlechoice4ch">取消</string>
    <string name="dialog9">设备未连接,不能操作</string>
    <string name="dialogx1">连接已断开，需要重连吗？</string>
    <string name="dialogx1en">Connection has been disconnected, need a reconnection?</string>
    <string name="dialogx1ch">連接已斷開，需要重連嗎</string>
    <string name="dialog1">提示</string>
    <string name="dialog1en">提示</string>
    <string name="dialog1ch">提示</string>
    <string name="dialog2">确定</string>
    <string name="dialog9en">The device is not connected, and inoperable</string>
    <string name="dialog2en">确定</string>
    <string name="dialog9ch">設備未連接,不能操作</string>
    <string name="dialog2ch">確定</string>
    <string name="menu5">蓝牙绑定设备</string>
    <string name="menu6">设置</string>
    <string name="conset">已连接</string>
    <string name="condisset">未连接</string>
    <string name="descri1">请参考传感器所标示的ID,</string>
    <string name="descri2">数据范围:0至9,a,b,c,d,e,f或A,B,C,D,E,F</string>
    <string name="setoption1">绑定蓝牙设备</string>
    <string name="setoption2">语言</string>
    <string name="setoption3">简体中文</string>
    <string name="setoption4">繁體中文</string>
    <string name="setoption5">English</string>
    <string name="setoption6">压力单位</string>
    <string name="setoption7">温度单位</string>
    <string name="setoption8">OBD语音警报开关</string>
    <string name="setoption13">警报声开关</string>
    <string name="setoption9">警报震动开关</string>
    <string name="setoption10">压力报警上限</string>
    <string name="setoption11">压力报警下限</string>
    <string name="setoption12">温度报警上限</string>
    <string name="ir1">胎压低</string>
    <string name="ir2">胎压高</string>
    <string name="ir3">传感器失效</string>
    <string name="ir4">电量低</string>
    <string name="ir5">温度高</string>
    <string name="singlechoice1">请选择操作模式</string>
    <string name="singlechoice2">ID模式</string>
    <string name="singlechoice3">交换模式</string>
    <string name="singlechoice4">取消</string>
    <string name="toastexist1">左前轮胎ID值已存在，请重新输入</string>
    <string name="toastexist2">右前轮胎ID值已存在,请重新输入</string>
    <string name="toastexist3">左后轮胎ID值已存在,请重新输入</string>
    <string name="toastexist4">右后轮胎ID值已存在,请重新输入</string>
    <string name="toast1">左前轮胎ID值含非法字符,请重新输入</string>
    <string name="toast2">右前轮胎ID值含非法字符,请重新输入</string>
    <string name="toast3">左后轮胎ID值含非法字符,请重新输入</string>
    <string name="toast4">右后轮胎ID值含非法字符,请重新输入</string>
    <string name="toast5">请输入轮胎ID</string>
    <string name="toast6">轮胎ID设置失败</string>
    <string name="dialog3">取消</string>
    <string name="dialog4">是否交换</string>
    <string name="dialog5">与</string>
    <string name="dialog6">请打开蓝牙</string>
    <string name="dialog7">此设备已连接</string>
    <string name="dialog8">连接成功</string>
    <string name="disconnected">连接失败</string>
    <string name="no_data">没有接收到数据</string>
    <string name="taiyanormal">胎压正常</string>
    <string name="taiyaexceptioin">胎压异常</string>
    <string name="taiyasetsuccess">轮胎ID设置成功</string>
    <string name="taiyachangesuccess">轮胎ID交换成功</string>
    <string name="taiyachangefail">轮胎ID交换失败</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="exit">退出</string>
    <string name="study_lf">左前轮学习</string>
    <string name="study_rf">右前轮学习</string>
    <string name="study_lr">左后轮学习</string>
    <string name="study_rr">右后轮学习</string>
    <string name="study_success">洩压学习成功</string>
    <string name="timeleft">胎压学习搜索中...%1$s秒</string>
    <string name="unknown_service">未知设备</string>
    <string name="unknown_characteristic">未知类型</string>
</resources>
