<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@+id/setting_content" android:background="@color/common_select_back" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@+id/setting_title">
        <RelativeLayout android:orientation="horizontal" android:paddingLeft="5.0dip" android:paddingTop="20.0dip" android:paddingRight="5.0dip" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
            <ImageView android:id="@+id/imageView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/car_13x_small" android:adjustViewBounds="true" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" />
            <EditText android:textSize="@dimen/textsize2" android:gravity="left" android:id="@+id/editText1" android:background="@drawable/intput_back_edittext" android:paddingLeft="@dimen/dimen3" android:paddingTop="@dimen/dimen4" android:paddingRight="@dimen/dimen3" android:paddingBottom="@dimen/dimen4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="40.0dip" android:hint="@string/carlunziid1" android:singleLine="true" android:layout_toLeftOf="@+id/imageView1" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" />
            <Button android:textSize="@dimen/luntaistudy" android:gravity="center" android:id="@+id/studybtn1" android:layout_width="wrap_content" android:layout_height="@dimen/studybtnheight" android:layout_marginTop="@dimen/studybtnmargintop" android:text="@string/study_lf" android:layout_toLeftOf="@+id/imageView1" android:layout_below="@+id/editText1" android:layout_alignParentLeft="true" />
            <EditText android:textSize="@dimen/textsize2" android:gravity="left" android:id="@+id/editText2" android:background="@drawable/intput_back_edittext" android:paddingLeft="@dimen/dimen3" android:paddingTop="@dimen/dimen4" android:paddingRight="@dimen/dimen3" android:paddingBottom="@dimen/dimen4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="40.0dip" android:hint="@string/carlunziid2" android:singleLine="true" android:layout_toRightOf="@+id/imageView1" android:layout_alignParentTop="true" android:layout_alignParentRight="true" />
            <Button android:textSize="@dimen/luntaistudy" android:gravity="center" android:id="@+id/studybtn2" android:layout_width="wrap_content" android:layout_height="@dimen/studybtnheight" android:layout_marginTop="@dimen/studybtnmargintop" android:text="@string/study_rf" android:layout_toLeftOf="@+id/imageView1" android:layout_toRightOf="@+id/imageView1" android:layout_below="@+id/editText2" android:layout_alignParentRight="true" />
            <EditText android:textSize="@dimen/textsize2" android:gravity="left" android:id="@+id/editText3" android:background="@drawable/intput_back_edittext" android:paddingLeft="@dimen/dimen3" android:paddingTop="@dimen/dimen4" android:paddingRight="@dimen/dimen3" android:paddingBottom="@dimen/dimen4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:hint="@string/carlunziid3" android:singleLine="true" android:layout_toLeftOf="@+id/imageView1" android:layout_below="@+id/studybtn1" android:layout_alignParentLeft="true" />
            <Button android:textSize="@dimen/luntaistudy" android:gravity="center" android:id="@+id/studybtn3" android:layout_width="wrap_content" android:layout_height="@dimen/studybtnheight" android:layout_marginTop="@dimen/studybtnmargintop" android:text="@string/study_lr" android:layout_toLeftOf="@+id/imageView1" android:layout_below="@+id/editText3" android:layout_alignParentLeft="true" />
            <EditText android:textSize="@dimen/textsize2" android:gravity="left" android:id="@+id/editText4" android:background="@drawable/intput_back_edittext" android:paddingLeft="@dimen/dimen3" android:paddingTop="@dimen/dimen4" android:paddingRight="@dimen/dimen3" android:paddingBottom="@dimen/dimen4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:hint="@string/carlunziid4" android:singleLine="true" android:layout_toRightOf="@+id/imageView1" android:layout_below="@+id/studybtn2" android:layout_alignParentRight="true" />
            <Button android:textSize="@dimen/luntaistudy" android:gravity="center" android:id="@+id/studybtn4" android:layout_width="wrap_content" android:layout_height="@dimen/studybtnheight" android:layout_marginTop="@dimen/studybtnmargintop" android:text="@string/study_rr" android:layout_toRightOf="@+id/imageView1" android:layout_below="@+id/editText4" android:layout_alignParentRight="true" />
        </RelativeLayout>
        <LinearLayout android:orientation="vertical" android:id="@+id/idset_ll1" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
            <TextView android:textColor="@color/common_select_back2" android:layout_gravity="center" android:id="@+id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/descri1" />
            <TextView android:textColor="@color/common_select_back2" android:layout_gravity="center" android:id="@+id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/descri2" />
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout android:id="@+id/setting_title" android:background="@color/common_top_bar_blue" android:layout_width="fill_parent" android:layout_height="@dimen/height_top_bar" android:layout_alignParentTop="true">
        <LinearLayout android:id="@+id/exit" android:layout_width="wrap_content" android:layout_height="fill_parent">
            <ImageView android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="9.0dip" android:checked="true" android:src="@drawable/check_back_btn" android:scaleType="centerInside" android:onClick="viewexitClick" />
        </LinearLayout>
        <TextView android:textSize="20.0sp" android:textColor="#ffffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/menu4" android:layout_centerInParent="true" />
        <LinearLayout android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_alignParentRight="true">
            <ImageView android:layout_gravity="center_vertical" android:id="@+id/savebtn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="9.0dip" android:src="@drawable/check_save_btn" android:scaleType="centerInside" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>