<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:orientation="vertical" android:id="@+id/setting_content" android:background="@color/common_select_back" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@+id/setting_title">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
                <RelativeLayout android:padding="@dimen/dimen3" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
                    <TextView android:textAppearance="?android:textAppearanceMedium" android:textSize="@dimen/textsize1" android:textColor="@android:color/white" android:gravity="center" android:id="@+id/textView1" android:background="@null" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/carlunzi1" android:layout_centerInParent="true" />
                </RelativeLayout>
                <View android:background="@color/common_select_back8" android:layout_width="1.0dip" android:layout_height="fill_parent" />
                <RelativeLayout android:padding="@dimen/dimen3" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
                    <TextView android:textAppearance="?android:textAppearanceMedium" android:textSize="@dimen/textsize1" android:textColor="@android:color/white" android:gravity="center" android:id="@+id/textView2" android:background="@null" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/carlunzi2" android:layout_centerInParent="true" />
                </RelativeLayout>
            </LinearLayout>
            <View android:background="@color/common_select_back8" android:layout_width="fill_parent" android:layout_height="1.0dip" />
            <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
                <RelativeLayout android:padding="@dimen/dimen3" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
                    <TextView android:textAppearance="?android:textAppearanceMedium" android:textSize="@dimen/textsize1" android:textColor="@android:color/white" android:gravity="center" android:id="@+id/textView3" android:background="@null" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/carlunzi3" android:layout_centerInParent="true" />
                </RelativeLayout>
                <View android:background="@color/common_select_back8" android:layout_width="1.0dip" android:layout_height="fill_parent" />
                <RelativeLayout android:padding="@dimen/dimen3" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
                    <TextView android:textAppearance="?android:textAppearanceMedium" android:textSize="@dimen/textsize1" android:textColor="@android:color/white" android:gravity="center" android:id="@+id/textView4" android:background="@null" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/carlunzi4" android:layout_centerInParent="true" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
        <ImageView android:id="@+id/carico" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/selectcar" android:layout_centerInParent="true" />
    </RelativeLayout>
    <RelativeLayout android:id="@+id/setting_title" android:background="@color/common_top_bar_blue" android:layout_width="fill_parent" android:layout_height="@dimen/height_top_bar" android:layout_alignParentTop="true">
        <LinearLayout android:id="@+id/exit" android:layout_width="45.0dip" android:layout_height="fill_parent">
            <ImageView android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="9.0dip"
                android:src="@drawable/check_back_btn"
                android:scaleType="centerInside"
                android:onClick="viewexitClick" />
        </LinearLayout>
        <TextView android:textSize="20.0sp" android:textColor="#ffffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/menu3" android:layout_centerInParent="true" />
    </RelativeLayout>
</RelativeLayout>