<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical"
        android:id="@+id/setting_content"
        android:background="@color/common_select_back"
        android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@+id/setting_title">
        <LinearLayout android:orientation="vertical"
            android:id="@+id/devicelistcon"
            android:background="@color/common_select_back"
            android:layout_width="fill_parent" android:layout_height="wrap_content">

            <TextView
                android:id="@+id/conset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10.0dip"
                android:text="@string/conset"
                android:textColor="@android:color/white" />

            <ListView android:id="@+id/listView1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical"
            android:id="@+id/devicelistuncon"
            android:background="@color/common_select_back"
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1.0">
            <TextView android:textColor="@android:color/white"
                android:id="@+id/condisset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10.0dip"
                android:text="@string/condisset" />
            <ListView android:id="@+id/listView2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout android:id="@+id/setting_title"
        android:background="@color/common_top_bar_blue"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/height_top_bar"
        android:layout_alignParentTop="true">
        <LinearLayout android:id="@+id/exit"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent">
            <ImageView
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="9.0dip"
                android:checked="true"
                android:src="@drawable/check_back_btn"
                android:scaleType="centerInside"
                android:onClick="viewexitClick" />
        </LinearLayout>
        <TextView android:textSize="20.0sp"
            android:textColor="#ffffffff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu5"
            android:layout_centerInParent="true" />
    </RelativeLayout>
</RelativeLayout>